# ebsinit

./: CMakeLists.txt  Doxyfile.in  LICENSE  README.md  ebsinit.c  main.c
test/: CMakeLists.txt  ebsinit_alignment_offset_test.c  ebsinit_alloc_test.c  ebsinit_core_test.c  ebsinit_do_test.c  ebsinit_max_no_test.c  ebsinit_setup_test.c  ebsinit_test.h
